k8s/api-gateway-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: api-gateway-srv
spec:
  selector:
    app: api-gateway
  ports:
    - protocol: TCP
      port: 4001
      targetPort: 4001
  type: ClusterIP
