k8s/community-service-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: community-service-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: community-service
  template:
    metadata:
      labels:
        app: community-service
    spec:
      containers:
        - name: community-container
          image: abinbabu2001/atomica-community-service
          ports:
            - containerPort: 5006
---
apiVersion: v1
kind: Service
metadata:
  name: community-service-srv
spec:
  selector:
    app: community-service
  ports:
    - name: community-ports
      protocol: TCP
      port: 5006
      targetPort: 5006
