k8s/contest-service-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: contest-service-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: contest-service
  template:
    metadata:
      labels:
        app: contest-service
    spec:
      containers:
        - name: contest-container
          image: abinbabu2001/atomica-contest-service
          imagePullPolicy: Always
          ports:
            - containerPort: 5007
---
apiVersion: v1
kind: Service
metadata:
  name: contest-service-srv
spec:
  selector:
    app: contest
  ports:
    - name: contest-ports
      protocol: TCP
      port: 5007
      targetPort: 5007
