k8s/problem-service-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: problem-service-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: problem-service
  template:
    metadata:
      labels:
        app: problem-service
    spec:
      containers:
        - name: problem-container
          image: abinbabu2001/atomica-problem-service
          ports:
            - containerPort: 5002
---
apiVersion: v1
kind: Service
metadata:
  name: problem-service-srv
spec:
  selector:
    app: problem-service
  ports:
    - name: problem-ports
      protocol: TCP
      port: 5002
      targetPort: 5002
