k8s/ingress-nginx-depl.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-controller
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/enable-cors: "true"
    nginx.ingress.kubernetes.io/cors-allow-origin: "https://atomica.live"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  ingressClassName: "nginx"
  rules:
    - host: atomica.live
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: api-gateway-srv
                port:
                  number: 4001
